libvirt-tf/file-with-iptables-rules.txt
# Generated by iptables-save v1.8.7 on Thu Jun 22 11:33:48 2023
*mangle
:PREROUTING ACCEPT [94:7480]
:INPUT ACCEPT [94:7480]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [66:15240]
:POSTROUTING ACCEPT [66:15240]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr1 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o virbr2 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Jun 22 11:33:48 2023
# Generated by iptables-save v1.8.7 on Thu Jun 22 11:33:48 2023
*filter
:INPUT ACCEPT [94:7480]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [66:15240]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -d 10.17.3.4/32 -o virbr2 -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A FORWARD -o virbr2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j LIBVIRT_OUT
-A LIBVIRT_FWI -d 10.17.4.0/24 -o virbr1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr1 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -d 10.17.3.0/24 -o virbr2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr2 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 10.17.4.0/24 -i virbr1 -j ACCEPT
-A LIBVIRT_FWO -i virbr1 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 10.17.3.0/24 -i virbr2 -j ACCEPT
-A LIBVIRT_FWO -i virbr2 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr1 -o virbr1 -j ACCEPT
-A LIBVIRT_FWX -i virbr2 -o virbr2 -j ACCEPT
-A LIBVIRT_INP -i virbr1 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr1 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr1 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr1 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr2 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr2 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr2 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr2 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr1 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr1 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr1 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr1 -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr2 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr2 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr2 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr2 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Thu Jun 22 11:33:48 2023
# Generated by iptables-save v1.8.7 on Thu Jun 22 11:33:48 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -p tcp -m tcp --dport 9867 -j DNAT --to-destination 10.17.3.4:80
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -s 10.17.4.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 10.17.4.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 10.17.4.0/24 ! -d 10.17.4.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 10.17.4.0/24 ! -d 10.17.4.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 10.17.4.0/24 ! -d 10.17.4.0/24 -j MASQUERADE
-A LIBVIRT_PRT -s 10.17.3.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 10.17.3.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 10.17.3.0/24 ! -d 10.17.3.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 10.17.3.0/24 ! -d 10.17.3.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 10.17.3.0/24 ! -d 10.17.3.0/24 -j MASQUERADE
COMMIT
# Completed on Thu Jun 22 11:33:48 2023
